# CoCoEmo

./: .gitignore  LICENSE  README.md  pyproject.toml
cocoemo/: __init__.py  utils.py
cocoemo/backbones/: __init__.py  _cosyvoice_ext.py  base.py  cosyvoice2.py  indextts2.py
cocoemo/data/: __init__.py
cocoemo/discriminability/: __init__.py  _probe.py  _probe_multi.py
cocoemo/evaluation/: __init__.py  metrics.py  mixed_metrics.py
cocoemo/steering/: __init__.py  _core_cosyvoice.py  _core_indextts.py
docs/: DATA_FORMAT.md
env/: cosyvoice2.txt  eval.txt
examples/: toy_mixed_manifest.csv  toy_single_manifest.csv
scripts/: discriminability.py  evaluate.py  export_steering_vectors.py  extract.py  run_pipeline.sh  smoke_cosyvoice2.py  smoke_indextts2.py  synthesize.py
steering_vectors/cosyvoice2/: angry_neutral_attn_output.pt  happy_neutral_attn_output.pt  sad_neutral_attn_output.pt  surprise_neutral_attn_output.pt
steering_vectors/indextts2/: angry_neutral_attn_output.pt  happy_neutral_attn_output.pt  sad_neutral_attn_output.pt  surprise_neutral_attn_output.pt
